<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ubusetas.ubu.adrian.proyectoubusetas.elegirclaves.ElegirClaves"
    tools:showIn="@layout/layout_elegir_claves">

    <TextView
        android:id="@+id/textView_elegir_dos_claves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_generos"
        android:textColor="@color/black" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_lista_seleccion_claves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_elegir_dos_claves"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textView_generos_selecionados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_view_lista_seleccion_claves"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/boton_obtener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:background="@color/accent"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/seleccionar"
        android:textSize="13dp" />

    <Button
        android:id="@+id/boton_ir_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boton_obtener"
        android:layout_alignBottom="@+id/boton_obtener"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/accent"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/boton_clave"
        android:textSize="13dp" />
</RelativeLayout>